--- a/custom_components/skyweather/manifest.json
+++ b/custom_components/skyweather/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "skyweather",
   "name": "Sky Weather Station",
-  "version": "0.1",
+  "version": "2022.4.1,
   "config_flow": true,
   "requirements": [""],
   "documentation": "",
